# gadgets

./: CMakeLists.txt  README.md  abstractgadget.cpp  abstractgadget.h  advancedgadget.h  compositegadget.h  documentgadget.h  main.cpp  specialtext.h  textgadget.h
.github/workflows/: ci.yml
